# reflex

./: .coverage  .coverage.Andrews-MacBook-Pro.local.35588.486545  .coverage.aleks-mbp.lan.88240.452786  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING.md  Dockerfile  LICENSE  MCP_README  MCP_README.md  PERFORMANCE.md  PROFILING_FINDINGS.md  README.md  RUST_REWRITE_PLAN.md  SECURITY.md  SPIKE_RESULTS.md  color.py  conftest.py  console.py  darglint_test.bat  hatch_build.py  package-lock.json  pyi_hashes.json  pyproject.toml  pyrightconfig.json  requirements.txt  rxconfig.py  test.js  test_benchmark_imports.py
.Jules/: palette.md
.codspeed/: results_1737338906383.json  results_1737339049018.json  results_1737339073664.json  results_1737339094692.json  results_1737339206717.json  results_1737339242040.json  results_1737339334189.json  results_1737339367654.json  results_1737341307184.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  codeql-config.yml  pull_request_template.md
.trunk/: trunk.yaml
.web/: bun.lockb  env.json  jsconfig.json  package.json  reflex.json  tailwind.config.js
Dockerfile/: Dockerfile
ainx_reflex_agent/: executor.py  workflow.json
benchmarks/: __init__.py  becnhmark_lighthouse.py  benchmark_compile_times.py  benchmark_imports.py  benchmark_lighthouse.py  benchmark_package_size.py  benchmark_pickle.py  benchmark_state_manager_redis.py  benchmark_web_size.py  conftest.py  lighthouse.sh  simple_app_benchmark_upload.py  test_benchmark_compile_components.py  test_benchmark_compile_pages.py  test_benchmark_large_state.py  test_benchmarks_compile_components.py  test_evaluate.py  test_sort.py  utils.py
benchmarks_scratch/: bench_fix1_type_validation.py  bench_fix2_mutable_proxy.py  bench_fix3_dirty_propagation.py  bench_fix4_getattribute.py  debug_fix4_was_touched.py  run.json
design/: per_component_state.md  rust-compiler-design.md
docker-example/: .dockerignore  Caddyfile  Dockerfile  README.md  app.Dockerfile  compose.yaml  prod.Dockerfile  requirements.txt
docs/: DEBUGGING.md
docs/app/: .gitignore  .memoize_baseline.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  rxconfig.py  tailwind.config.js
docs/app/.github/workflows/: codespell.yml  integration_tests.yml  pre-commit.yml  unit_tests.yml  whitelist.yml
docs/app/agent_files/: __init__.py  _plugin.py
docs/app/assets/: chakra_color_mode_provider.js  custom-colors.css  fonts.css  llms.txt  robots.txt  tailwind-theme.css
docs/app/assets/components/: GradientButton.tsx
docs/app/assets/meta/: browserconfig.xml  site.webmanifest
docs/app/data/: GanttChart-updated.csv  canada_life.csv  gapminder2007.csv  mt_bruno_elevation.csv  nba.csv  wind_dataset.csv
docs/app/public/: sitemap.xml
docs/app/reflex.lock/: package.json
docs/app/reflex_docs/: changelogs.py  docgen_pipeline.py  reflex_docs.py  whitelist.py
docs/app/reflex_docs/components/: button.py  hint.py
docs/app/reflex_docs/components/docpage/navbar/: __init__.py
docs/app/reflex_docs/components/docpage/navbar/buttons/: sidebar.py
docs/app/reflex_docs/pages/: __init__.py  library_previews.py
docs/app/reflex_docs/pages/docs/: __init__.py  apiref.py  cloud.py  cloud_cliref.py  component.py  custom_components.py  enterprise.py  env_vars.py  guide.py  library.py  markdown_api.py  metadata.py  recipes_overview.py  source.py
docs/app/reflex_docs/pages/docs/api_reference/: plugins.py  utils.py
docs/app/reflex_docs/pages/docs_landing/: __init__.py
docs/app/reflex_docs/pages/docs_landing/views/: __init__.py  ai_builder.py  divider.py  enterprise.py  framework.py  hero.py  hosting.py  link_item.py  other.py  self_hosting.py
docs/app/reflex_docs/pages/integrations/: integration.py  integration_gallery.py  integration_header.py  integration_list.py  integration_request.py
docs/app/reflex_docs/scripts/: check_doc_links.py
docs/app/reflex_docs/templates/: __init__.py
docs/app/reflex_docs/templates/docpage/: __init__.py  docpage.py  feedback_state.py  state.py
docs/app/reflex_docs/templates/docpage/sidebar/: __init__.py  sidebar.py  state.py
docs/app/reflex_docs/templates/docpage/sidebar/sidebar_items/: __init__.py  ai.py  cloud.py  component_lib.py  enterprise.py  item.py  learn.py  recipes.py  reference.py
docs/app/reflex_docs/utils/: http.py
docs/app/reflex_docs/views/: animated_box.py  docs_navbar.py  inkeep.py  search.py
docs/app/reflex_docs/views/bottom_section/: get_started.py  newsletter.py
docs/app/scripts/: check_doc_links.py  hatch_build.py
docs/app/styles/: tailwind.css
docs/app/templates/: dalle.md  dashboard.md  image-gen.md  llamaindex-app.md  nba-app.md
docs/app/tests/: conftest.py  test_agent_files.py  test_breadcrumb.py  test_breadcrumbs.py  test_changelogs.py  test_doc_description.py  test_doc_links.py  test_docgen_double_eval.py  test_docgen_link_targets.py  test_inkeep.py  test_integrations.py  test_routes.py  test_sidebar.py  test_static_shiki.py  test_upload_not_evaluated.py  test_urls.py  utils.py
docs/app/tests/assets/: chakra_color_mode_provider.js
docs/package/: README.md  pyproject.toml
docs/package/reflex_docs_bundle/: __init__.py
docs/package/scripts/: hatch_build.py
experimental/reflex-compiler-core/: .gitignore  Cargo.toml  README.md  audit_app.py  bench.py  compile_app_demo.py  fastnodes.py  pyproject.toml  real_docs_cache_spike.py  real_docs_depgraph_spike.py  real_docs_salsa.py  salsa_spike.py  spike_caching.py  stage_b.py  validate.py
experimental/reflex-compiler-core/src/: lib.rs
integration/: conftest.py  test_background_task.py  test_call_script.py  test_client_storage.py  test_component_state.py  test_computed_vars.py  test_connection_banner.py  test_deploy_url.py  test_dynamic_components.py  test_dynamic_routes.py  test_event_actions.py  test_event_chain.py  test_exception_handlers.py  test_form_submit.py  test_hybrid_properties.py  test_input.py  test_large_state.py  test_lifespan.py  test_media.py  (+16 more)
(+3044 files in other folders)
