[project]
name = "reflex-docs-app"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator",
    "fastapi",
    "flexdown",
    "googletrans-py",
    "mistletoe",
    "openai",
    "orjson",
    "pandas",
    "plotly-express",
    "psycopg[binary]",
    "python-frontmatter",
    "reflex @ git+https://github.com/reflex-dev/reflex@main",
    "reflex-docgen @ git+https://github.com/reflex-dev/reflex@main#subdirectory=packages/reflex-docgen",
    "reflex-enterprise",
    "reflex-hosting-cli",
    "reflex-pyplot",
    "reflex-integrations-docs @ git+https://github.com/reflex-dev/integrations-docs@main",
    "reflex-ui @ git+https://github.com/reflex-dev/reflex-ui@main",
    "reflex-ui-shared @ git+https://github.com/reflex-dev/reflex-ui@main#subdirectory=shared",
    "alembic",
    "requests",
    "ruff-format",
    "sqlalchemy",
    "sqlmodel",
    "typesense",
]

[dependency-groups]
dev = [
    "playwright",
    "pre-commit",
    "pytest-playwright",
    "pytest",
    "ruff",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["reflex_docs"]

[tool.ruff]
target-version = "py311"
output-format = "concise"
lint.isort.split-on-trailing-comma = false
lint.select = [
    "ANN001",
    "B",
    "C4",
    "D",
    "E",
    "ERA",
    "F",
    "FURB",
    "I",
    "N",
    "PERF",
    "PGH",
    "RUF",
    "SIM",
    "T",
    "TRY",
    "W",
]
lint.ignore = [
    "ANN001",
    "B008",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D205",
    "E402",
    "E501",
    "ERA001",
    "F403",
    "RUF006",
    "RUF008",
    "RUF012",
    "SIM115",
    "T201",
    "TRY0",
    "TRY300",
]
lint.pydocstyle.convention = "google"
lint.allowed-confusables = ['’']

[tool.codespell]
skip = "data/*"

[tool.uv]
required-version = ">=0.7.0"
